Stop long lines on Hybrid overflowing

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ a:hover {
 
 pre {
     margin-right: -30px;
-    padding-right: 30px;
+    padding-right: 20px;
     overflow-x: auto;
     font-size: 20px;
 }
